--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,4 +1,5 @@
 ---
+import  SpeedInsights  from "@vercel/speed-insights/astro"
 import { Image } from "astro:assets";
 import logo from '../images/logo.png';
 
@@ -19,6 +20,7 @@ const { title = 'Astro blog' } = Astro.props;
         <title>{title}</title>
   </head>
   <body class="">
+    <SpeedInsights />
     <nav class="bg-gray-900 text-white">
       <div
         class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
